# aktenraum

./: .dockerignore  .gitignore  CLAUDE.md  QUICKSTART.md  README.md  TODOS.md  Taskfile.yml  love-letter.txt  package.json  pnpm-lock.yaml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
apps/web/: .gitignore  eslint.config.js  index.html  package.json  tsconfig.app.json  vite.config.ts
docker/: .env.example  aktenraum-api.env.example  auto-tagger.env.example  backup.env.example  docker-compose.dev.yml  docker-compose.yml
docker/backup/: Dockerfile  crontab  entrypoint.sh  verify-backup.sh
docker/nginx/: Dockerfile  nginx.conf
docker/paperless-scripts/: post_consume.sh
docker/postgres-init/: 01-create-aktenraum-db.sh
docker/systemd/: aktenraum-backup.service  aktenraum-backup.timer
docs/: api-reference.md  architecture-diagram.md  architecture.md  configuration.md  development.md  document-types.md  glossary.md  workflow.md
docs/adr/: 000-template.md  001-monorepo-tooling.md  002-distribution-desktop-app.md  003-csrf-defence.md  004-two-python-services.md  005-test-phase-access-via-tailscale.md
docs/plans/: audit-remediation.md  custom-frontend.md  desktop-app.md  modular-ai-prompts.md  rag-phase-1.md
docs/runbooks/: first-time-setup.md  operations.md  restore.md  rotate-api-keys.md  tailscale-remote-access.md
docs/sessions/: 2026-04-30.md  2026-05-04.md  2026-05-07.md  2026-05-15.md  2026-05-16.md  2026-05-17.md  2026-05-20.md  2026-05-21.md  2026-05-23-auto-approve-rules-ui.md  (+4 more)
evals/: golden-questions.yaml
scripts/: backfill-rag-index.sh  backup.sh  bootstrap-paperless.sh  bootstrap-secrets.sh  eval-confidence-correlation.py  fix-token.sh  migrate-ai-suggested-to-pending.sh  migrate-ai-summary-to-longtext.sh  run-rag-eval.sh  setup.sh
services/aktenraum-api/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
services/aktenraum-api/alembic/: env.py
services/aktenraum-api/alembic/versions/: 20260430_0001_create_users.py  20260514_0002_add_document_type_fields.py  20260515_0003_add_app_settings.py  20260515_0004_add_answer_llm_quality.py  20260523_0005_add_auto_approve_rules.py
services/aktenraum-api/src/aktenraum_api/: _auto_tagger.py  cli.py  config.py  main.py  middleware.py  paperless_gw.py
services/aktenraum-api/src/aktenraum_api/ai/: __init__.py  answer_prompt.py  deps.py  explain.py  intent.py  prompt.py  prompt_modules.py  retrieval.py  router.py  schemas.py  translate.py
services/aktenraum-api/src/aktenraum_api/auth/: __init__.py  bootstrap.py  deps.py  jwt.py  router.py  schemas.py
services/aktenraum-api/src/aktenraum_api/db/: __init__.py  models.py  session.py
services/aktenraum-api/src/aktenraum_api/documents/: router.py
services/aktenraum-api/src/aktenraum_api/eval/: __init__.py  metrics.py  runner.py
services/aktenraum-api/src/aktenraum_api/events/: router.py
services/aktenraum-api/src/aktenraum_api/inbox/: __init__.py  router.py  schemas.py  service.py
services/aktenraum-api/src/aktenraum_api/settings/: auto_approve_schemas.py  auto_approve_service.py  quality.py  router.py  schemas.py  service.py
services/aktenraum-api/src/aktenraum_api/trash/: __init__.py  router.py  schemas.py  service.py
services/aktenraum-api/src/aktenraum_api/type_fields/: router.py  schemas.py  service.py
services/aktenraum-api/tests/: conftest.py  test_ai_answer.py  test_ai_explain.py  test_ai_intent.py  test_ai_prompt.py  test_ai_prompt_modules.py  test_ai_retrieval.py  test_ai_router.py  test_ai_translate.py  test_auth_bootstrap.py  test_auth_flow.py  test_doc_detail_endpoints.py  test_documents_router.py  test_eval_metrics.py  test_eval_runner.py  test_events_router.py  test_health.py  test_inbox_router.py  test_inbox_tags.py  test_library_router.py  test_settings_auto_approve.py  test_settings_router.py  test_status_endpoints.py  test_trash_router.py  test_type_fields.py  test_upload_reprocess.py
services/auto-tagger/: Dockerfile  pyproject.toml
services/auto-tagger/src/auto_tagger/: auto_approve_config.py  backend_provider.py  backfill.py  bootstrap_paperless.py  config.py  dedup.py  indexer.py  main.py  models.py  paperless.py  processing_state.py  propagator.py  tagger.py  webhook.py
services/auto-tagger/src/auto_tagger/llm/: anthropic_backend.py  base.py  factory.py  ollama_backend.py
services/auto-tagger/tests/: conftest.py  test_auto_approve_config.py  test_dedup.py  test_indexer.py  test_models.py  test_ollama_recovery.py  test_paperless.py  test_propagator.py  test_rag_backfill.py  test_rag_chunker.py  test_rag_embedder.py  test_rag_reranker.py  test_rag_vector_store.py  test_tagger.py  test_type_prompt.py  test_webhook.py
(+132 files in other folders)
