[project]
name = "auto-tagger"
version = "0.1.0"
description = "AI classification and extraction service for aktenraum/Paperless-ngx"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.40.0",
    "ollama>=0.4.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.4.0",
    "aiohttp>=3.10.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-aiohttp>=1.0",
    "ruff>=0.8.0",
]

[project.scripts]
auto-tagger = "auto_tagger.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auto_tagger"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# tagger.py contains a long German taxonomy prompt where line wrapping would
# damage the prompt as content. The line-length rule is not load-bearing here.
"src/auto_tagger/tagger.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
