[project]
name = "auto-tagger"
version = "0.1.0"
description = "AI classification and extraction service for aktenraum/Paperless-ngx"
requires-python = ">=3.13"
dependencies = [
    "aktenraum-core",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.4.0",
    "aiohttp>=3.10.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-aiohttp>=1.0",
    "ruff>=0.8.0",
    # Hot-reload for the dev compose overlay (docker/docker-compose.dev.yml).
    # `watchfiles "auto-tagger" <dirs>` watches for .py edits and restarts
    # the worker. Not in prod deps — the prod image bakes the source and
    # has no reason to ship a file watcher.
    "watchfiles>=0.24",
]

[project.scripts]
auto-tagger = "auto_tagger.main:main"

[tool.uv.sources]
aktenraum-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auto_tagger"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# tagger.py contains a long German taxonomy prompt where line wrapping would
# damage the prompt as content. The line-length rule is not load-bearing here.
"src/auto_tagger/tagger.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
